--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,14 +43,14 @@
         </nav>
     </div>
     <h2 data-aos="flip-left" class="titulos">Contacto</h2>
-    <section class="contactSection">
-        <article data-aos="fade-left" class="contactDescription">
+    <section class="formSection">
+        <article data-aos="fade-left" class="formDescription">
             <h3>¿Tenés alguna pregunta o duda?</h3>
             <h4>&#128242 Si queres contactarme, llena el formulario&#128242</h4>
             <p>En breve vamos a contestarte al mail que declaras!</p>
         </article>
-        <aside class="asideContacto">
-            <form class="contactForm" action="contactos.php" method="post" enctype="text/plain">
+        <aside class="asideForm">
+            <form class="form" action="contactos.php" method="post" enctype="text/plain">
                 <label for="name">*Nombre:</label><br>
                 <input class="widthAndSize" required type="text" name="name" id="name"> <br> <br>
                 <label for="surname">Apellido:</label><br>
@@ -71,7 +71,7 @@
                 <input class="kindOfButton" type="reset" value="Limpiar Campos">
             </form>
         </aside>
-</section>
+    </section>
     <footer>
         <p>© Hecho por Felix Toledo</p>
         <a href="resenas.html">Reseñas</a>
