--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -44,14 +44,14 @@
     </div>
     <h2 data-aos="flip-right" class="titulos">Galería</h2>
     <main class="contenedorFotos">
-        <div class="foto foto1"><img src="/media/images/galeria/foto_1.jpg" width="100%" height="100%" alt="foto1"></div>
-        <div class="foto foto2"><img src="/media/images/galeria/foto_2.jpg" width="100%" height="100%" alt="foto2"></div>
-        <div class="foto foto3"><img src="/media/images/galeria/foto_3.jpg" width="100%" height="100%" alt="foto3"></div>
-        <div class="foto foto4"><img src="/media/images/galeria/foto_4.jpg" width="100%" height="100%" alt="foto4"></div>
-        <div class="foto foto5"><img src="/media/images/galeria/foto_5.jpg" width="100%" height="100%" alt="foto5"></div>
-        <div class="foto foto6"><img src="/media/images/galeria/foto_6.jpg" width="100%" height="100%" alt="foto6"></div>
-        <div class="foto foto7"><img src="/media/images/galeria/foto_7.jpg" width="100%" height="100%" alt="foto7"></div>
-        <div class="foto foto8"><img src="/media/images/galeria/foto_8.jpg" width="100%" height="100%" alt="foto8"></div>
+        <div class="foto foto1"><img src="../media/images/galeria/foto_1.jpg" width="100%" height="100%" alt="foto1"></div>
+        <div class="foto foto2"><img src="../media/images/galeria/foto_2.jpg" width="100%" height="100%" alt="foto2"></div>
+        <div class="foto foto3"><img src="../media/images/galeria/foto_3.jpg" width="100%" height="100%" alt="foto3"></div>
+        <div class="foto foto4"><img src="../media/images/galeria/foto_4.jpg" width="100%" height="100%" alt="foto4"></div>
+        <div class="foto foto5"><img src="../media/images/galeria/foto_5.jpg" width="100%" height="100%" alt="foto5"></div>
+        <div class="foto foto6"><img src="../media/images/galeria/foto_6.jpg" width="100%" height="100%" alt="foto6"></div>
+        <div class="foto foto7"><img src="../media/images/galeria/foto_7.jpg" width="100%" height="100%" alt="foto7"></div>
+        <div class="foto foto8"><img src="../media/images/galeria/foto_8.jpg" width="100%" height="100%" alt="foto8"></div>
     </main>
     <footer>
         <p>© Hecho por Felix Toledo</p>
