--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </nav>
     </div>
     <section class="firstSection">
-       <div class="firstSection__media"><video class = "firstSection__media--video" radius-color" autoplay muted controls alt="Video X de prueba" src="/media/videos/video_odon.mp4"></video></div>
+       <div class="firstSection__media"><video class = "firstSection__media--video" radius-color" autoplay muted controls alt="Video X de prueba" src="./media/videos/video_odon.mp4"></video></div>
         <img class="firstSection__person" src="./media/images/person.png" alt="Doctora">
         <article class="firstSection__description">
             <p>&#128147;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laboriosam!<br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
