Se agregaron transformaciones al hover de subir y logo - Se optimizo el codigo y se arreglaron algunos bugs

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <title>Rebeca Toledo - Odontologa Profesional</title>
 </head>
 <body>
-    <div class="turnero">
-        <a target="_blank" href="http://wa.me/543794636393">📅
-        <span>Turnos</span></a>
-    </div>
+        <a target="_blank" class="turnero" href="http://wa.me/543794636393">📅<span>Turnos</span></a>
     <header>
         <div class="headerTop">
             <ul class="headerTop__list1">
@@ -115,7 +112,7 @@
         <p>© Hecho por Felix Toledo</p>
         <a href="./pages/resenas.html">Reseñas</a>
     </footer>
-    <div class="subir"><a href="#">☝</a></div>
+    <a class="subir" href="#">☝</a>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
