--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -26,20 +28,38 @@
                 </ul>
             </div>
         </div>
+        <div id="headerTop" class="container-fluid">
+
+        </div>
         <div class="headerBottom">
             <div class="logo">
                 <a href="#">Rebeca Toledo</a>
             </div>
         </div>
     </header>
+
+    <nav class="sticky-top navbar navbar-expand-sm navbar-light">
+        <div class="container-fluid justify-content-end">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav mx-auto align-items-end">
+                <li class="nav-item mx-2"><a class="nav-link" href="#">INICIO</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="#servicios">SERVICIOS</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="#sobreMi">SOBRE MI</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="./pages/galeria.html">GALERIA</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="./pages/contacto.html">CONTACTO</a></li>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
     <div class="nav">
         <nav>
             <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#servicios">SERVICIOS</a></li>
-                <li><a href="#sobreMi">SOBRE MI</a></li>
-                <li><a href="./pages/galeria.html">GALERIA</a></li>
-                <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                
             </ul>
         </nav>
     </div>
