--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -31,17 +33,23 @@
             </div>
         </div>
     </header>
-    <div class="nav">
-        <nav>
-            <ul>
-                <li><a href="../index.html">INICIO</a></li>
-                <li><a href="../index.html#servicios">SERVICIOS</a></li>
-                <li><a href="../index.html#sobreMi">SOBRE MI</a></li>
-                <li><a href="galeria.html">GALERIA</a></li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+    <nav class="sticky-top navbar navbar-expand-sm navbar-light">
+        <div class="container-fluid justify-content-end">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav mx-auto align-items-end">
+                <li class="nav-item mx-2"><a class="nav-link" href="../index.html">INICIO</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="../index.html#servicios">SERVICIOS</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="../index.html#sobreMi">SOBRE MI</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="galeria.html">GALERIA</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
+              </li>
             </ul>
-        </nav>
-    </div>
+          </div>
+        </div>
+    </nav>
     <h2 data-aos="flip-right" class="titulos">Galería</h2>
     <main class="contenedorFotos">
         <div class="foto foto1"><img src="../media/images/galeria/foto_1.jpg" width="100%" height="100%" alt="foto1"></div>
