contacts foms actions added

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
             <p>En breve vamos a contestarte al mail que declaras!</p>
         </article>
         <aside class="asideForm">
-            <form class="form" action="contactos.php" method="post" enctype="text/plain">
+            <form class="form" action="mailto:felixtoledoctes@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
                 <label for="name">*Nombre:</label><br>
                 <input class="widthAndSize" required type="text" name="name" id="name"> <br> <br>
                 <label for="surname">Apellido:</label><br>
