You can finish your form by sending mail

--- a/pages/resenas.html
+++ b/pages/resenas.html
@@ -55,7 +55,7 @@
         <h3>Me serviria muchisimo que me des una reseña para poder mejorar y que cuentes tu experiencia&#128522</h3>
         </article>
         <aside class="asideForm">
-            <form class="form" action="mailto:felixtoledoctes@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
+            <form class="form" action="mailto:felixtoledoctes@gmail.com" method="POST" enctype="text/plain" name="EmailForm">
                 <label for="name">Nombre:</label>
                 <input class="widthAndSize" type="text" name="name" id="name"><br><br>
                 <label for="image">Si queres podes agregar una imagen tuya</label><br>
