--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
 <body>
     <a target="_blank" class="turnero" href="http://wa.me/543794636393">📅<span>Turnos</span></a>
     <header>
-        <div class="headerTop">
-            <ul class="headerTop__list1">
-                <li><a href="https://www.google.com/maps/dir//Plaza+Juan+de+Vera,+San+Juan+871,+W3400+CBG,+Corrientes/@-27.4672642,-58.8369942,15z/data=!4m16!1m6!3m5!1s0x0:0x16ecd55857ebb405!2sPlaza+Juan+de+Vera!8m2!3d-27.4672642!4d-58.8369942!4m8!1m0!1m5!1m1!1s0x94456ca4622de6ab:0x16ecd55857ebb405!2m2!1d-58.8369942!2d-27.4672642!3e3" target="_blank"><i class="fa-solid fa-location-dot"></i>Av. Ayacucho 3310</a></li>
-                <li><a href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i> felixtoledoctes@gmail.com</a></li>
-                <li><a href="./pages/resenas.html"><i class="fa-solid fa-star"></i> Reseñas</a></li>
-            </ul>
-            <div class="socialMedia">
-                <ul>
-                    <li><a target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a target="_blank" href="https://facebook.com"><i class="fa-brands fa-facebook"></i></li></a>
-                    <li><a target="_blank" href="http://wa.me/543794636393"><i class="fa-brands fa-whatsapp"></i></a></li>
-                </ul>
+        <div class="container-fluid">
+            <div class="row justify-content-between topHeader">
+                <div id="info" class="col-4 col-md-8">
+                    <a class="mx-3 text-black" href="https://www.google.com/maps/dir//Plaza+Juan+de+Vera,+San+Juan+871,+W3400+CBG,+Corrientes/@-27.4672642,-58.8369942,15z/data=!4m16!1m6!3m5!1s0x0:0x16ecd55857ebb405!2sPlaza+Juan+de+Vera!8m2!3d-27.4672642!4d-58.8369942!4m8!1m0!1m5!1m1!1s0x94456ca4622de6ab:0x16ecd55857ebb405!2m2!1d-58.8369942!2d-27.4672642!3e3" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Av. Ayacucho 3310</span></a>
+                    <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> felixtoledoctes@gmail.com</span></a>
+                    <a class="mx-3 text-black" href="resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
+                </div>
+                <div id="redes" class="col-4 col-md-4 text-sm-end">
+                    <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="mx-3 text-black" target="_blank" href="https://web.whatsapp.com"><i class="fa-brands fa-whatsapp"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="headerBottom">
-            <div class="logo">
-                <a href="#">Rebeca Toledo</a>
+            <div class="row text-center">
+                <div class="logo">
+                    <a href="../index.html">Rebeca Toledo</a>
+                </div>
             </div>
         </div>
     </header>
-    <nav class="navbar navbar-expand-sm navbar-light">
+    <nav class="sticky-top navbar navbar-expand-sm navbar-light">
         <div class="container-fluid justify-content-end">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -46,12 +46,13 @@
                 <li class="nav-item mx-2"><a class="nav-link" href="#servicios">SERVICIOS</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="#sobreMi">SOBRE MI</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="./pages/galeria.html">GALERIA</a></li>
+                <li class="nav-item mx-2"><a class="nav-link" href="./pages/blog.html">BLOG</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="./pages/contacto.html">CONTACTO</a></li>
               </li>
             </ul>
           </div>
         </div>
-    </nav>
+    </nav>    
     <section class="firstSection">
        <div class="firstSection__media"><video class = "firstSection__media--video" radius-color" autoplay muted controls alt="Video X de prueba" src="./media/videos/video_odon.mp4"></video></div>
         <img class="firstSection__person" src="./media/images/person.png" alt="Doctora">
