--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="blog.css">
     <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,8 +53,24 @@
           </div>
         </div>
     </nav>
-    <main>
-        <h1>PÁGINA EN DESARROLLO</h1>
+    <main id="mainSpace" class="container-fluid">
+        <h3 class="titulos">Blogs</h3>
+        <div class="space sections">
+            <section id="blogList" class="row justify-content-between">
+                <a id="blogLink" href="#blog1" class="col-12 col-md-3">
+                    <figure>
+                        <img src="../media/images/blog/bebes.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
+                        <p class="text-center">Consejo para cepillar a los mas pequeños en casa</p>
+                    </figure>
+                </a>
+                <a id="blogLink" href="#blog2" class="col-12 col-md-3">
+                    <figure>
+                        <img src="../media/images/blog/protesis.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
+                        <p class="text-center">Consejo para cepillar a los mas pequeños en casa</p>
+                    </figure>
+                </a>                
+            </section>
+        </div>
     </main>
 </body>
 </html>
