--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
                 <li class="nav-item mx-2"><a class="nav-link" href="#servicios">SERVICIOS</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="#sobreMi">SOBRE MI</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="./pages/galeria.html">GALERIA</a></li>
-                <li class="nav-item mx-2"><a class="nav-link" href="./pages/blog.html">BLOG</a></li>
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">BLOG</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./pages/blog.html">BLOG</a></li>
+                      <li><a class="dropdown-item" href="./pages/blog.html#blog1">Bebés</a></li>
+                      <li><a class="dropdown-item" href="./pages/blog.html#blog2">Protesis</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item mx-2"><a class="nav-link" href="./pages/contacto.html">CONTACTO</a></li>
-              </li>
             </ul>
           </div>
         </div>
@@ -118,9 +124,28 @@
             <a href="./pages/resenas.html">Clic aqui para Reseñas</a>
         </article>
     </section>
-    <footer>
-        <p>© Hecho por Felix Toledo</p>
-        <a href="./pages/resenas.html">Reseñas</a>
+    <footer class="container-fluid">
+        <div class="row justify-content-around">
+            <nav class="col-12 col-md-5 col-lg-3">
+                <ul class="navbar-nav text-center">
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../index.html#servicios">SERVICIOS</a></li>
+                    <li><a href="../index.html#sobreMi">SOBRE MI</a></li>
+                    <li><a href="galeria.html">GALERIA</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="contacto.html">CONTACTO</a></li>
+                  </ul>
+            </nav>
+            <div id="desarrollador" class="col-12 col-md-5 col-lg-3 text-center">
+                <p class="text-white">Desarrollado por <b class="text-white">Felix Toledo</b></p>
+                <p><b class="text-white">Contacto Desarrollador:</b> <a class="text-white" href="mailto:felixtoledoctes@gmail.com">felixtoledoctes@gmail.com</a></p>
+            </div>
+            <div id="fixDent" class="col-12 col-md-5 col-lg-3 text-center">
+                <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
+                Odontologa Profesional</p>
+                <p class="text-white">Av. Ayacucho 3310 <br> Corrientes Capital <br> 3400</p>
+            </div>
+        </div>
     </footer>
     <a class="subir" href="#">☝</a>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
