--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-    <nav class="sticky-top navbar navbar-expand-sm navbar-light">
+    <nav  class="sticky-top navbar navbar-expand-sm navbar-light">
         <div class="container-fluid justify-content-end">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,14 @@
                 <li class="nav-item mx-2"><a class="nav-link" href="../index.html#servicios">SERVICIOS</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="../index.html#sobreMi">SOBRE MI</a></li>
                 <li class="nav-item mx-2"><a class="nav-link" href="galeria.html">GALERIA</a></li>
-                <li class="nav-item mx-2"><a class="nav-link" href="blog.html">BLOG</a></li>
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">BLOG</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="blog.html">BLOG</a></li>
+                      <li><a class="dropdown-item" href="blog.html#blog1">Bebés</a></li>
+                      <li><a class="dropdown-item" href="blog.html#blog2">Protesis</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item mx-2"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
               </li>
             </ul>
@@ -64,9 +71,28 @@
         <div class="foto foto7"><img src="../media/images/galeria/foto_7.jpg" width="100%" height="100%" alt="foto7"></div>
         <div class="foto foto8"><img src="../media/images/galeria/foto_8.jpg" width="100%" height="100%" alt="foto8"></div>
     </main>
-    <footer>
-        <p>© Hecho por Felix Toledo</p>
-        <a href="resenas.html">Reseñas</a>
+    <footer class="container-fluid">
+        <div class="row justify-content-around">
+            <nav class="col-12 col-md-5 col-lg-3">
+                <ul class="navbar-nav text-center">
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="../index.html#servicios">SERVICIOS</a></li>
+                    <li><a href="../index.html#sobreMi">SOBRE MI</a></li>
+                    <li><a href="galeria.html">GALERIA</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="contacto.html">CONTACTO</a></li>
+                  </ul>
+            </nav>
+            <div id="desarrollador" class="col-12 col-md-5 col-lg-3 text-center">
+                <p class="text-white">Desarrollado por <b class="text-white">Felix Toledo</b></p>
+                <p><b class="text-white">Contacto Desarrollador:</b> <a class="text-white" href="mailto:felixtoledoctes@gmail.com">felixtoledoctes@gmail.com</a></p>
+            </div>
+            <div id="fixDent" class="col-12 col-md-5 col-lg-3 text-center">
+                <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
+                Odontologa Profesional</p>
+                <p class="text-white">Av. Ayacucho 3310 <br> Corrientes Capital <br> 3400</p>
+            </div>
+        </div>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
