responsive align in the footer fixed

--- a/pages/resenas.html
+++ b/pages/resenas.html
@@ -111,7 +111,7 @@
     </aside>
     <footer class="container-fluid">
         <div class="row justify-content-around">
-            <nav class="col-12 col-md-5 col-lg-3">
+            <nav class="col-12 col-md-4 col-lg-3">
                 <ul class="navbar-nav text-center">
                     <li><a href="../index.html">INICIO</a></li>
                     <li><a href="../index.html#servicios">SERVICIOS</a></li>
@@ -121,11 +121,11 @@
                     <li><a href="contacto.html">CONTACTO</a></li>
                   </ul>
             </nav>
-            <div id="desarrollador" class="col-12 col-md-5 col-lg-3 text-center">
+            <div id="desarrollador" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white">Desarrollado por <b class="text-white">Felix Toledo</b></p>
                 <p><b class="text-white">Contacto Desarrollador:</b> <a class="text-white" href="mailto:felixtoledoctes@gmail.com">felixtoledoctes@gmail.com</a></p>
             </div>
-            <div id="fixDent" class="col-12 col-md-5 col-lg-3 text-center">
+            <div id="fixDent" class="col-12 col-md-4 col-lg-3 text-center align-responsive">
                 <p class="text-white"><b class="text-white">Rebeca Toledo</b> <br>
                 Odontologa Profesional</p>
                 <p class="text-white">Av. Ayacucho 3310 <br> Corrientes Capital <br> 3400</p>
