Animaciones agregadas al boton de turnero - Animaciones AOS agregadas en algunos lugares

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -14,6 +14,7 @@
     <title>Blogs - Rebeca Toledo</title>
 </head>
 <body>
+    <a target="_blank" class="turnero" href="http://wa.me/543794636393">📅<span>Turnos</span></a>
     <header>
         <div class="container-fluid">
             <div class="row justify-content-between topHeader">
@@ -64,13 +65,13 @@
         <h3 class="titulos">Blogs</h3>
         <div class="space sections">
             <section id="blogList" class="row">
-                <a id="blogLink" href="#blog1" class="col-12 col-md-4 col-lg-3">
+                <a data-aos="zoom-in" id="blogLink" href="#blog1" class="col-12 col-md-4 col-lg-3">
                     <figure>
                         <img src="../media/images/blog/bebes.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
                     </figure>
                     <p class="text-start">Consejo para cepillar a los mas pequeños en casa.</p>
                 </a>
-                <a id="blogLink" href="#blog2" class="col-12 col-md-3 col-lg-3">
+                <a data-aos="zoom-in" id="blogLink" href="#blog2" class="col-12 col-md-3 col-lg-3">
                     <figure>
                         <img src="../media/images/blog/protesis.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
                     </figure>
@@ -86,7 +87,7 @@
                 <figure id="blogsImage">
                     <img data-aos="fade-up" src="../media/images/blog/bebes.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
                 </figure>
-                <div data-aos="flip-left" class="text">
+                <div data-aos="flip-up" data-aos-duration="2000" class="text">
                     <p>Nuestros niños son lo más importante para nosotros por eso debemos recordar los siguientes tips:</p>
                     <ul>
                         <li>Enseñarles a cepillarse al menos <b>3 VECES AL DÍA</b> toda la boca durante 2 MINUTOS.</li>
@@ -108,7 +109,7 @@
                 <figure id="blogsImage">
                     <img data-aos="fade-up" src="../media/images/blog/protesis.jpg" class="img-thumbnail" alt="Imagen de bebes" style="width: 100%;">
                 </figure>
-                <div data-aos="flip-left" class="text">
+                <div data-aos="flip-down" data-aos-duration="2000" class="text">
                     <p>La higiene de la prótesis dental puede ser algo laboriosa, pero debe realizarse para poder así conservarlas durante un largo período. Las medidas de higiene deben ser constantes, para evitar efectos secundarios, como acumulación de placa bacteriana tanto en encías como dientes. Las medidas a tener en cuenta son:</p>
                     <ul>
                         <li>Retirar y limpiar los dispositivos protéticos después de las comidas, como también realizar la correspondiente higiene en la boca.</li>
