--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="dentista,ondontologos,Corrientes,clinica dental,dientes,encias,cuidado bucal,clinica odontologica,odontologia,dentista Corrientes,rebeca toledo dentista,rebeca toledo,odontologo Corrientes,dentistas en Corrientes,buscar,buscar dentista,buscar clinica odontologica,Corrientes dentitas,Corrientes ondontologos">
+    <meta name="description" content="Dentista especializado en el cuidado de la salud bucal. Proporciona tratamientos para mantener los dientes y encías sanos. Corrientes, Argentina.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -30,7 +32,7 @@
             </div>
             <div class="row text-center">
                 <div class="logo">
-                    <a href="../index.html">Rebeca Toledo</a>
+                    <a href="../index.html"><h1>Rebeca Toledo</h1></a>
                 </div>
             </div>
         </div>
