--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <h2 data-aos="flip-left" class="titulos">Servicios</h2>
     <section  id="servicios" class="sections services">
         <article class="especializaciones servicesBoxes">
-            <h2>Especializaciones&#128218</h2>
+            <h3>Especializaciones&#128218</h3>
             <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
                 <li>Bibendum nascetur lacus nibh purus, congue nunc torquent.</li>
@@ -100,12 +100,12 @@
             </div>
         </article>
         <article class="ubication servicesBoxes">
-            <h2>Ubicacion&#127751</h2>
+            <h3>Ubicacion&#127751</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit fames libero.</p>
             <div class="ubicationMap"><iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14160.256284280336!2d-58.84318380618218!3d-27.467264614933487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca4622de6ab%3A0x16ecd55857ebb405!2sPlaza%20Juan%20de%20Vera!5e0!3m2!1ses-419!2sar!4v1649963769335!5m2!1ses-419!2sar"></iframe></div>
         </article>
         <article class="pagos servicesBoxes">
-            <h2>Medios de pago&#128179</h2>
+            <h3>Medios de pago&#128179</h3>
             <ul>
                 <li>FOTO MP</li>
                 <li>FOTO EFECTIVO</li>
@@ -116,7 +116,7 @@
     <h2 data-aos="flip-right" class="titulos">Sobre Mi</h2>
     <section id="sobreMi" class="sobreMi sections">
         <article class="sobreMi__article">
-            <img class="imagenPersona" width="200px" src="./media/images/person.png" alt="">
+            <img class="imagenPersona" width="200px" src="./media/images/person.png" alt="medic">
             <p>&#129306Lorem ipsum dolor sit amet consectetur adipiscing elit, nullam dui fermentum enim velit dapibus et, viverra fusce pellentesque posuere nunc tempus. Justo nisi class habitant ligula nisl etiam aptent, vehicula rhoncus lobortis at cum scelerisque turpis neque, arcu facilisi eros velit pellentesque torquent. Fringilla mi cubilia integer phasellus porttitor porta nibh commodo, nam interdum natoque leo donec odio mus, per taciti iaculis nunc erat sed dictumst.</p>
             <p>&#128211Semper cras tincidunt nullam nam odio mattis platea donec, faucibus praesent mi ad habitasse convallis mus litora at, ut natoque gravida curae turpis quisque nunc. Ac platea phasellus habitant mollis nam tempus inceptos posuere himenaeos dictum, a arcu imperdiet egestas accumsan et massa mus faucibus aliquet cubilia, euismod mi aptent montes dis nostra blandit augue lobortis. Facilisis diam dictumst aenean ad donec parturient faucibus ornare ullamcorper aptent ligula, turpis conubia rhoncus tempus mus blandit dis vehicula accumsan. Nec ultricies ut id lobortis lacus torquent, tempor egestas vel mi vivamus suscipit eleifend, senectus magnis nulla posuere et.</p>
             <p>&#128567Ad fusce pellentesque libero ac cum et platea, malesuada nascetur blandit eu donec dictumst tempor, metus elementum cubilia feugiat justo pharetra. Rhoncus sodales iaculis turpis mauris himenaeos aptent imperdiet magnis metus pharetra, vehicula netus per et aenean dapibus proin lectus consequat. Etiam consequat bibendum pretium sed pharetra semper eu curabitur placerat vel fermentum mi leo, imperdiet ante vitae justo molestie aliquam aenean dis habitant metus laoreet. Duis hendrerit mattis velit taciti ornare platea malesuada arcu tristique, turpis a dapibus nostra tellus condimentum habitant elementum, justo potenti sollicitudin in erat suspendisse suscipit enim.</p>
