--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
         </article>
         <article class="ubication servicesBoxes">
-            <h3>Ubicacion&#127751</h3>
+            <h3>Ubicación&#127751</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipiscing elit fames libero.</p>
             <div class="ubicationMap"><iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14160.256284280336!2d-58.84318380618218!3d-27.467264614933487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca4622de6ab%3A0x16ecd55857ebb405!2sPlaza%20Juan%20de%20Vera!5e0!3m2!1ses-419!2sar!4v1649963769335!5m2!1ses-419!2sar"></iframe></div>
         </article>
@@ -123,7 +123,7 @@
         </article>
         <article data-aos="fade-up" class="sobreMi__secondArticle">
             <p>Me seria de mucha ayuda que me dejes una reseña&#128522</p>
-            <a href="./pages/resenas.html">Clic aqui para Reseñas</a>
+            <a href="./pages/resenas.html">Clic aquí para Reseñas</a>
         </article>
     </section>
     <footer class="container-fluid">
