--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id="info" class="col-4 col-md-8">
                     <a class="mx-3 text-black" href="https://www.google.com/maps/dir//Plaza+Juan+de+Vera,+San+Juan+871,+W3400+CBG,+Corrientes/@-27.4672642,-58.8369942,15z/data=!4m16!1m6!3m5!1s0x0:0x16ecd55857ebb405!2sPlaza+Juan+de+Vera!8m2!3d-27.4672642!4d-58.8369942!4m8!1m0!1m5!1m1!1s0x94456ca4622de6ab:0x16ecd55857ebb405!2m2!1d-58.8369942!2d-27.4672642!3e3" target="_blank"><i class="fa-solid fa-location-dot"></i><span class="d-none d-lg-inline"> Av. Ayacucho 3310</span></a>
                     <a class="mx-3 text-black" href="mailto:felixtoledoctes@gmail.com"><i class="fa-solid fa-envelope"></i><span class="d-none d-lg-inline"> felixtoledoctes@gmail.com</span></a>
-                    <a class="mx-3 text-black" href="resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
+                    <a class="mx-3 text-black" href="./pages/resenas.html"><i class="fa-solid fa-star"></i><span class="d-none d-lg-inline"> Reseñas</span></a>
                 </div>
                 <div id="redes" class="col-4 col-md-4 text-sm-end">
                     <a class="mx-3 text-black" target="_blank" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
@@ -32,7 +32,7 @@
             </div>
             <div class="row text-center">
                 <div class="logo">
-                    <a href="../index.html"><h1>Rebeca Toledo</h1></a>
+                    <a href="#"><h1>Rebeca Toledo</h1></a>
                 </div>
             </div>
         </div>
