starting to add real text and real pictures to the project

--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
        <div class="firstSection__media"><video class = "firstSection__media--video" radius-color" autoplay muted controls alt="Video X de prueba" src="./media/videos/video_odon.mp4"></video></div>
         <img class="firstSection__person" src="./media/images/person.png" alt="Doctora">
         <article class="firstSection__description">
-            <p>&#128147;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, laboriosam!<br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+            <p>&#128147;Estamos haciendo de la odontología una experiencia placentera, orientada a rehabilitar y preservar la salud bucal.</p>
         </article>
     </section>
     <section class="secondSection">
         <iframe data-aos="fade-down" class="secondSection__boxes secondSection__boxes--map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14160.256284280336!2d-58.84318380618218!3d-27.467264614933487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456ca4622de6ab%3A0x16ecd55857ebb405!2sPlaza%20Juan%20de%20Vera!5e0!3m2!1ses-419!2sar!4v1649963769335!5m2!1ses-419!2sar"></iframe>
         <article data-aos="fade-up" class="secondSection__boxes" id="time">
             <h2 >Horarios&#128197</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed odio morbi quis commodo odio.</p>     
+            <p>Lunes, Martes y Viernes <br> 8hs - 20hs <br><br> Miercoles y Jueves <br> 8hs - 14hs <br><br> Sabados: pedir turnos</p>     
         </article>
         <article data-aos="fade-down" class="secondSection__boxes" id="place">
-            <h2 >Obra Social&#128196</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed odio morbi quis commodo odio.</p>     
+            <h2>Obra Social&#128196</h2>
+            <p>Podes contactarte para preguntarme si trabajamos con tu obra social!</p>     
         </article>
         <a data-aos="fade-up" class="secondSection__boxes coments" href="pages/resenas.html">
             <article>
             <h2 radius-color letraGrande>Reseñas&#128513&#128533</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed odio morbi quis commodo odio.</p>     
+            <p>Se abrió este espacio de reseñas para que puedas dejar a toda la gente una opinión sobre mí! <br><br> Clic aquí para reseñas.</p>     
             </article>
         </a>
     </section>
